# nomad-bot-rag-docs-discord

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_web_interface.py
dash/: streamlit_app.py
data/: documentation_links.txt
data/chunks/: docs.dynamic.jsonl
data/discord/: nomad_discord.fixed.jsonl  nomad_discord.sentence.jsonl
data/docs/: nomad_docs.semantic.jsonl  nomad_docs.sentence.jsonl
data/evaluation/: gold_all.jsonl  gold_candidates.jsonl  gold_candidates_discord.csv  gold_candidates_discord_2025-12-17.csv  gold_candidates_discord_2025-12-17.jsonl  gold_candidates_discord_authored.jsonl  gold_candidates_discord_issues.csv  (+20 more)
dev-notes/: codebase-assessment-2025-12-17.md  gold_candidate_generation_status.md
eval/: gold_candidates_discord.csv  gold_candidates_discord.jsonl  gold_candidates_discord_authored.csv  judges.py  model_adapter.py  pipeline.py  text_metrics.py
notebooks/: discord_chunking.ipynb  docs_chunking.ipynb  docs_gold_reviewer.ipynb  docs_gold_reviewer_wdiscord.ipynb  example.ipynb  generate_notebook.py
reports/: chunking_summary.md
scripts/: chatbot.py  conversation_workflow.py  esma_eval_gold.py  gradio_app.py  main.py  query.py  run_eval.sh  server.py
static/: style.css
templates/: index.html
utils/: build_api_docs_from_openapi.py  clean_discord_threads.py  dynamic_chunking.py  fetch_gitlab_content.py  fetch_local_content.py  fetch_multiple_repos.py  fetch_repo_content.py  harvest_gold_from_discord.py  harvest_gold_from_discord_authored.py  harvest_gold_from_html.py  make_glossary_gold.py
(+199 files in other folders)
