[project]
name = "nomad_ragbot"
version = "0.1.0"
description = "A prototype chatbot built with retrieval-augmented generation (RAG) to assist researchers and developers working with the NOMAD platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.28.0",
    "gradio>=5.41.0",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
]
